--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.14
+aiosignal==1.3.2
+annotated-types==0.7.0
 anyio==4.9.0
 asttokens==3.0.0
+attrs==25.3.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
@@ -8,11 +13,17 @@ cycler==0.12.1
 decorator==5.2.1
 docutils==0.21.2
 executing==2.2.0
+fastapi==0.115.12
 filelock==3.18.0
 fonttools==4.56.0
+frozenlist==1.5.0
 fsspec==2025.3.0
+grpclib==0.4.7
 h11==0.14.0
+h2==4.2.0
+hpack==4.1.0
 huggingface-hub==0.29.3
+hyperframe==6.1.0
 idna==3.10
 ipdb==0.13.13
 ipython==9.0.2
@@ -23,10 +34,14 @@ Jinja2==3.1.6
 kiwisolver==1.4.8
 marimo==0.11.26
 Markdown==3.7
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
+mdurl==0.1.2
+modal==0.73.126
 mpmath==1.3.0
+multidict==6.2.0
 narwhals==1.32.0
 networkx==3.4.2
 numpy==2.2.4
@@ -35,10 +50,14 @@ parso==0.8.4
 pexpect==4.9.0
 pillow==11.1.0
 prompt_toolkit==3.0.50
+propcache==0.3.1
+protobuf==5.29.4
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pycrdt==0.11.1
+pydantic==2.10.6
+pydantic_core==2.27.2
 Pygments==2.19.1
 pymdown-extensions==10.14.3
 pyparsing==3.2.3
@@ -46,21 +65,32 @@ python-dateutil==2.9.0.post0
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
+rich==13.9.4
 ruff==0.11.2
 safetensors==0.5.3
+shellingham==1.5.4
+sigtools==4.0.1
 six==1.17.0
 sniffio==1.3.1
 stack-data==0.6.3
 starlette==0.46.1
 sympy==1.13.1
+synchronicity==0.9.11
+tiktoken==0.9.0
 tokenizers==0.21.1
+toml==0.10.2
 tomlkit==0.13.2
 torch==2.6.0
 tqdm==4.67.1
 traitlets==5.14.3
 transformers==4.50.1
+typer==0.15.2
+types-certifi==2021.10.8.3
+types-toml==0.10.8.20240310
 typing_extensions==4.12.2
 urllib3==2.3.0
 uvicorn==0.34.0
+watchfiles==1.0.4
 wcwidth==0.2.13
 websockets==15.0.1
+yarl==1.18.3
