--- a/requirements.txt
+++ b/requirements.txt
@@ -10,14 +10,16 @@ charset-normalizer==3.4.1
 click==8.1.8
 contourpy==1.3.1
 cycler==0.12.1
+datasets==3.5.0
 decorator==5.2.1
+dill==0.3.8
 docutils==0.21.2
 executing==2.2.0
 fastapi==0.115.12
 filelock==3.18.0
 fonttools==4.56.0
 frozenlist==1.5.0
-fsspec==2025.3.0
+fsspec==2024.12.0
 grpclib==0.4.7
 h11==0.14.0
 h2==4.2.0
@@ -42,10 +44,12 @@ mdurl==0.1.2
 modal==0.73.126
 mpmath==1.3.0
 multidict==6.2.0
+multiprocess==0.70.16
 narwhals==1.32.0
 networkx==3.4.2
 numpy==2.2.4
 packaging==24.2
+pandas==2.2.3
 parso==0.8.4
 pexpect==4.9.0
 pillow==11.1.0
@@ -55,6 +59,7 @@ protobuf==5.29.4
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==19.0.1
 pycrdt==0.11.1
 pydantic==2.10.6
 pydantic_core==2.27.2
@@ -62,6 +67,7 @@ Pygments==2.19.1
 pymdown-extensions==10.14.3
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+pytz==2025.2
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
@@ -88,9 +94,11 @@ typer==0.15.2
 types-certifi==2021.10.8.3
 types-toml==0.10.8.20240310
 typing_extensions==4.12.2
+tzdata==2025.2
 urllib3==2.3.0
 uvicorn==0.34.0
 watchfiles==1.0.4
 wcwidth==0.2.13
 websockets==15.0.1
+xxhash==3.5.0
 yarl==1.18.3
